Changes undone - Returned to 2-24-2021 State

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Y'all Are Awesome!✨</h1>
+      <h1>Simple Liker</h1>
     </header>
     <article class="media-post" id="201811189">
       <header>
